src/main/default/objects/C501_Appointment__c/fields/Appointment_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Appointment Schedule</label>
    <referenceTo>C501_Appointment_Schedule__c</referenceTo>
    <relationshipLabel>Appointments</relationshipLabel>
    <relationshipName>Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>