src/main/default/objects/C501_Appointment__c/fields/Appointments_Full__c.field-meta.xml
<CustomField>
    <fullName>Appointments_Full__c</fullName>
    <formula>C501_Scheduled_Appointments__c &gt;=  Maximum_Scheduled_Appointments__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Appointments Full</label>
    <type>Checkbox</type>
</CustomField>