src/main/default/objects/C501_Appointment__c/fields/Appointments_Max_per_Month__c.field-meta.xml
<CustomField>
    <fullName>Appointments_Max_per_Month__c</fullName>
    <formula>Appointment_Schedule__r.Number_Appointments_per_Month__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Appointments Max per Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>