src/main/default/objects/C501_Appointment__c/fields/Available_Time__c.field-meta.xml
<CustomField>
    <fullName>Available_Time__c</fullName>
    <label>Available Time</label>
    <type>DateTime</type>
</CustomField>