src/main/default/objects/C501_Appointment__c/fields/Before_10__c.field-meta.xml
<CustomField>
    <fullName>Before_10__c</fullName>
    <formula>HOUR( TIMEVALUE( Available_Time__c ) ) &lt; 10</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Before 10</label>
    <type>Checkbox</type>
</CustomField>