src/main/default/objects/C501_Appointment__c/fields/C501_DayOfWeek__c.field-meta.xml
<CustomField>
    <fullName>C501_DayOfWeek__c</fullName>
    <formula>WEEKDAY( DATEVALUE (Available_Time__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DayOfWeek</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>