src/main/default/objects/C501_Appointment__c/fields/C501_Scheduled_Appointments__c.field-meta.xml
<CustomField>
    <fullName>C501_Scheduled_Appointments__c</fullName>
    <label>Scheduled Appointments</label>
    <summaryFilterItems>
        <field>C501_Appointment_Scheduled__c.Canceled__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>C501_Appointment_Scheduled__c.C501_Appointment__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>