src/main/default/objects/C501_Appointment__c/fields/Maximum_Scheduled_Appointments__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Scheduled_Appointments__c</fullName>
    <defaultValue>5</defaultValue>
    <label>Maximum Scheduled Appointments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>