src/main/default/objects/C501_Appointment__c/fields/Name_Unique__c.field-meta.xml
<CustomField>
    <fullName>Name_Unique__c</fullName>
    <description>Unique Name to prevent more than 1 appointment for same day and time</description>
    <label>Name Unique</label>
    <length>128</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>