src/main/default/objects/C501_Appointment__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <formula>Time__c + &quot; (&quot; + TEXT(Maximum_Scheduled_Appointments__c - C501_Scheduled_Appointments__c) + &quot; Remaining)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Summary</label>
    <type>Text</type>
</CustomField>