src/main/default/objects/C501_Appointment__c/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <label>Time</label>
    <length>16</length>
    <type>Text</type>
</CustomField>