src/main/default/objects/C501_Appointment__c/listViews/All_Templates.listView-meta.xml
<ListView>
    <fullName>All_Templates</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Template</value>
    </filters>
    <label>All Templates</label>
</ListView>