src/main/default/objects/C501_Appointment__c/listViews/Custom_By_Date.listView-meta.xml
<ListView>
    <fullName>Custom_By_Date</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date__c</field>
        <operation>equals</operation>
        <value>2/27/2025</value>
    </filters>
    <label>Custom By Date</label>
</ListView>